# powregister

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_cuda_colab.ipynb
powregister/: __init__.py  cli.py  core.py
