[project]
name = "powregister"
version = "0.1.0"
description = "Bittensor Subnet PoW Registration Tool for Private Usage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "0xmsu" }
]
keywords = ["bittensor", "pow", "registration", "blockchain"]

dependencies = [
    "pycryptodome>=3.19.0",
    "substrate-interface>=1.7.0",
    "bittensor>=8.0.0",
]

[project.optional-dependencies]
cuda = [
    "cubit>=0.1.0",
    "torch>=2.0.0",
]

[project.scripts]
powregister = "powregister.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["powregister"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=7.0.0",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = ["no-any-return", "var-annotated", "valid-type", "attr-defined", "operator"]
